# clean-architecture-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  a.out  cookie.txt  example.env  install.sh  test.cpp
benchmarks/: README.md  auth.lua
fbs/: auth.fbs  compile-client.sh  compile.sh
src/: CMakeLists.txt  main.cpp
src/adapter/http/: request.hpp  response.hpp
src/adapters/: CMakeLists.txt
src/adapters/http/: build.hpp  factory.cpp  factory.hpp  mock.cpp  mock.hpp  request.cpp  wrapper.cpp  wrapper.hpp
src/api/: auth.hpp
src/db/: CMakeLists.txt
src/db/core/: pg.cpp  pg.hpp  singleton.cpp  singleton.hpp
src/db/user/: build.hpp  factory.cpp  factory.hpp  mock.cpp  mock.hpp  pg.cpp  pg.hpp  singleton.cpp  singleton.hpp  sql.sql
src/entities/: CMakeLists.txt
src/entities/log/: main.hpp
src/entities/user/: build.hpp  factory.cpp  factory.hpp  test.cpp  user.test.cpp
src/fbs/: auth.hpp
src/interfaces/: CMakeLists.txt
src/interfaces/crypto/: build.hpp  factory.cpp  factory.hpp  main.cpp  main.hpp  mock.cpp  mock.hpp  singleton.cpp  singleton.hpp  test.cpp
src/interfaces/logger/: build.hpp  dev.cpp  dev.hpp  factory.cpp  silent.hpp  singleton.cpp  singleton.hpp
src/interfaces/store/: build.hpp  mock.cpp  mock.hpp  redis.cpp  redis.hpp  singleton.cpp  singleton.hpp  test.cpp
src/use-cases/: CMakeLists.txt
src/use-cases/auth/: factory.cpp  login.hpp  logout.hpp  register.hpp  singleton.cpp  singleton.hpp  test.cpp  user.hpp
src/utils/: env.cpp  env.hpp  number.cpp  number.hpp  string.cpp  string.hpp
src/wrappers/: CMakeLists.txt
src/wrappers/http/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  cookie.hpp  header.hpp  mime_types.cpp  mime_types.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  response.cpp  response.hpp  router.hpp  server.cpp  server.hpp
swagger/: openapi.yaml
